--- a/src/components/index.css
+++ b/src/components/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: bisque;
   background-color: #242424;
 
   font-synthesis: none;
@@ -34,8 +34,9 @@ h1 {
 }
 
 button {
+  color: inherit;
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid bisque;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -44,9 +45,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
